style:fix: convert <strong> to <b> to avoid issue with strong styles on mobile

--- a/styles/AboutStyles.module.css
+++ b/styles/AboutStyles.module.css
@@ -28,6 +28,10 @@
   color: #5214cb;
 }
 
+.textContent b {
+  color: #8b49ff;
+}
+
 @media (max-width: 550px) {
   .main {
     box-shadow: none;
